# amll-ttml-tool

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  PLUGIN.md  README.md  biome.json  i18next-parser.config.yaml  index.html  manifest.webmanifest  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sw.js  sw.js.map  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts  workbox-cbf83eee.js  workbox-cbf83eee.js.map
.github/workflows/: build-desktop.yaml  build-test.yaml  build-web.yaml
.yarn/patches/: kuromoji-npm-0.1.2-f20046ed5f.patch
assets/: AMLLPreviewView-B70-DIab.js  AMLLPreviewView-B70-DIab.js.map  AMLLPreviewView-BOuS4-O_.css  AMLLPreviewView-DKT5EfJD.js  AMLLPreviewView-DKT5EfJD.js.map  AMLLPreviewView-QBKdMel8.css  AMLLPreviewView-oQWgkHSE.js  AMLLPreviewView-oQWgkHSE.js.map  LyricEditor-1_W2USPR.js  LyricEditor-1_W2USPR.js.map  LyricEditor-CWlEov6G.css  LyricEditor-Crd_FvRZ.js  LyricEditor-Crd_FvRZ.js.map  LyricEditor-DLRUMNf_.css  LyricEditor-Dznh6pKe.css  LyricEditor-ekszpxpa.js  LyricEditor-ekszpxpa.js.map  LyricSyncEditor--US-sO8q.css  LyricSyncEditor-BBSfWs4h.js  LyricSyncEditor-BBSfWs4h.js.map  LyricSyncEditor-BFNh_jXn.js  LyricSyncEditor-BFNh_jXn.js.map  LyricSyncEditor-CuWeRkRV.js  LyricSyncEditor-CuWeRkRV.js.map  LyricSyncEditor-DHeUU9xy.css  amll_lyric_bg-CcXMyCR-.wasm  amll_lyric_bg-Djctypla.wasm  amll_lyric_bg-Dy4VPaCX.wasm  common-DVjCy48Z.js  common-DVjCy48Z.js.map  common-NnVfFTW1.js  common-NnVfFTW1.js.map  edit-mode-CDby-Nl8.js  edit-mode-CDby-Nl8.js.map  edit-mode-n_7-49ZF.js  edit-mode-n_7-49ZF.js.map  index-B2C7e2J6.css  index-BSJ4gx3G.css  index-BYTDGKdj.js  index-BYTDGKdj.js.map  (+79 more)
icons/: icon.icns
libs/jieba-wasm/: README.md  jieba_rs_wasm.d.ts  package.json
locales/cs-CZ/: translation.json
locales/da-DK/: translation.json
locales/en-US/: translation.json
locales/es-ES/: translation.json
locales/fr-FR/: translation.json
locales/pl-PL/: translation.json
locales/pt-BR/: translation.json
locales/ru-RU/: translation.json
locales/sk-SK/: translation.json
locales/zh-CN/: translation.json
public/: decode-audio.wasm  site.webmanifest
scripts/: compress.mjs  update-version.ts
src/: App.module.css  App.tsx  App.vue  Main.vue  appkit.sass  index.css  index.sass  main.ts  main.tsx  states.ts  store.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.toml  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-wasm/: Cargo.toml  README.md
src-wasm/src/: lib.rs  lrc.rs  lys.rs  qrc.rs  utils.rs  yrc.rs
(+294 files in other folders)
